2013-07-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (set_dump_cb): New method.
	* perl/Amanda/Taper/Worker.pm: return FAILED if
	  $self->{'xfer_source'}->get_addrs failed.
	* server-src/driver.c: Accept a FAILED immediately after a PORT-WRITE.

2013-07-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amanda.psgi.pl: Add missing JSON method.

2013-07-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/json.pm: Fix doc formating.

2013-07-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON.pm: Add missing Amanda::JSON modules.

2013-07-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/amglue/bigint.c (amglue_Sv*): Theses functions take a new err
	  argument to be able to return error message.
	* perl/amglue/amglue.h (amglue_Sv*): Change prototypes.
	* perl/amglue/integers.swg: Add new amglue_Sv* argument and croak on
	  error.
	* perl/Amanda/Device.swg (set_gvalue_from_sv): return FALSE if
	  amglue_Sv* return an error.
	* perl/Amanda/NDMP.swg: Use new amglue_SvU64 err argument.

2013-07-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/Report.pm: add it.

2013-07-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/Device.pm, perl/Amanda/JSON/Dle.pm,
	  perl/Amanda/JSON/Label.pm, perl/Amanda/JSON/Status.pm: Fix Copyright
	  to 2013.
	* perl/Amanda/JSON/RPC/Dispatcher.pm: Use pretty json output.
	* perl/Amanda/JSON/Report.pm: New perl module.
	* perl/Amanda/Message.pod: Report use 190000 message code.
	* perl/Amanda/Report.pm: Add Amanda::Report::Message.
	* perl/Amanda/Report/human.pm: Use new
	  Amanda::Tapelist::list_new_tapes output.
	* perl/Amanda/Report/json.pm: Document json format, add a
	  generate_report method, jsonify the output_tapeinfo method.
	* perl/Amanda/Tapelist.swg: New binding for list_new_tapes.
	* perl/Makefile.am: Add Amanda/JSON/Report.pm
	* server-src/amadmin.c: Use new list_new_tapes output.